# agentic-payments

./: .env.example  .gitignore  .gitlab-ci.yml  .railwayignore  Procfile  README.md  agent_wallet.json  check_bidask.py  debug.py  debug_all.py  debug_array.py  debug_bidask.py  debug_bidask_again.py  debug_instruments.py  debug_more.py  debug_ticker_param.py  discover_methods.py  discover_methods_v2.py  discover_state.py  final_sweep_attempt.py  get_btc_vwap.py  inspect_vwap.py  list_methods.py  mcp_config.json  patch.py  pyproject.toml  requirements.txt  server.json  sweep_dust.py  test_24h.py  test_actual_methods.py  test_blocksize.py  test_env.py  test_env2.py  test_env3.py  test_facilitator.py  test_methods.py  test_rpc.py
docs/: README_EXTERNAL.md  agent_president_gtm_operating_prompt.md  anthropic_beta_connector_runbook.md  api_agent_manual.md  claude_connector.html  cursor_mcp_deployment_runbook.md  developer_portal.html  privacy_policy.html  project_scope.md  prompt_examples.html  remote_mcp_quickstart.html  security_vulnerability_report_2026-04-27.md  smithery_manifest.json  support.html
scratch/: qa_suite.py  shield_test.py
scripts/: agent_buyer.py  agent_loop.py  autonomous_solana_agent.py  generate_blocksize_pdfs.py  generate_terminal_demo_gif.py  manual_phantom_client.py  mock_x402_demo.py  run_dev.sh  test_agent_flow.py  test_anthropic_mcp_connector.py
src/: __init__.py  anthropic_auth.py  anthropic_mcp_server.py  authenticated_mcp_server.py  blocksize_client.py  config.py  connector_auth.py  credit_manager.py  cursor_auth.py  cursor_mcp_server.py  (+6 more)
(+53 files in other folders)
