[project]
name = "blocksize-mcp-x402"
version = "0.6.1"
description = "Blocksize Capital MCP Server with x402 Micropayment Integration — Institutional-grade crypto market data for AI agents"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Blocksize Capital" }
]

dependencies = [
    # MCP Server
    "fastmcp>=2.3.0",
    # HTTP framework for resource server
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    # HTTP client
    "httpx>=0.27.0",
    # Data validation
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    # FastMCP's in-memory store expects TLRUCache, absent from cachetools 4.x.
    "cachetools>=5.3.0",
    # Environment management
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "respx>=0.22.0",
    "ruff>=0.8.0",
]
x402 = [
    # x402 payment protocol — install when CDP is configured
    "x402[fastapi]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
